--- a/scss/style.css
+++ b/scss/style.css
@@ -43,10 +43,61 @@ header .nav ul {
   column-gap: 56px;
 }
 header .nav ul li {
-  color: #7D828F;
+  color: #7d828f;
   font-family: "League Spartan";
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
   line-height: 25px;
+}
+header .wrapper {
+  background-image: url(../img-first-page/promo-background.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 720px;
+}
+header .wrapper .promo {
+  display: flex;
+  flex-direction: column;
+  padding-left: 190px;
+  padding-top: 186px;
+}
+header .wrapper .promo h1 {
+  max-width: 544px;
+  color: #fff;
+  font-size: 96px;
+  font-weight: 700;
+  line-height: 80px;
+  letter-spacing: -2px;
+}
+header .wrapper .promo p {
+  width: 445px;
+  margin-top: 10px;
+  margin-bottom: 41px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 24px;
+}
+header .wrapper .promo button {
+  border: 0;
+  width: 252px;
+  height: 72px;
+  background: #1b1d23;
+  padding: 25px 32px 22px 37px;
+  column-gap: 24px;
+  display: flex;
+  align-items: center;
+}
+header .wrapper .promo button p {
+  width: 135px;
+  color: #fff;
+  text-align: right;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 25px;
+}
+header .wrapper .promo button h3 {
+  color: white;
 }/*# sourceMappingURL=style.css.map */
