--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,9 +12,9 @@ button {
 a {
     text-decoration: none;
 }
-body{
-    background-color:bisque;
-    font-family: 'League Spartan', sans-serif;
+body {
+    background-color: bisque;
+    font-family: "League Spartan", sans-serif;
 }
 .container {
     width: 100%;
@@ -36,13 +36,65 @@ header {
             justify-content: space-between;
             align-items: center;
             column-gap: 56px;
-            li{
-                color: #7D828F;
+            li {
+                color: #7d828f;
                 font-family: "League Spartan";
                 font-size: 18px;
                 font-style: normal;
                 font-weight: 700;
                 line-height: 25px;
+            }
+        }
+    }
+    .wrapper {
+        background-image: url(../img-first-page/promo-background.png);
+        background-position: center center;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 720px;
+        .promo {
+            display: flex;
+            flex-direction: column;
+            padding-left: 190px;
+            padding-top: 186px;
+            h1 {
+                max-width: 544px;
+                color: #fff;
+                font-size: 96px;
+                font-weight: 700;
+                line-height: 80px;
+                letter-spacing: -2px;
+            }
+            p {
+                width: 445px;
+                margin-top: 10px;
+                margin-bottom: 41px;
+                color: #fff;
+                font-size: 18px;
+                font-weight: 500;
+                line-height: 24px;
+            }
+            button {
+                border: 0;
+                width: 252px;
+                height: 72px;
+                background: #1b1d23;
+                padding: 25px 32px 22px 37px;
+                column-gap: 24px;
+                display: flex;
+                align-items: center;
+
+                p {
+                    width: 135px;
+                    color: #fff;
+                    text-align: right;
+                    font-size: 18px;
+                    font-weight: 700;
+                    line-height: 25px;
+                }
+                h3 {
+                    color: white;
+                }
             }
         }
     }
