--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    outline: 1px solid blue;
+    // outline: 1px solid blue;
 }
 ul li,
 button {
@@ -13,7 +13,6 @@ a {
     text-decoration: none;
 }
 body {
-    background-color: bisque;
     font-family: "League Spartan", sans-serif;
 }
 .container {
@@ -28,7 +27,6 @@ header {
         padding: 56px 0;
         display: flex;
         align-items: center;
-        background-color: aqua;
         column-gap: 95px;
         ul {
             list-style: none;
@@ -43,6 +41,9 @@ header {
                 font-style: normal;
                 font-weight: 700;
                 line-height: 25px;
+                &:hover {
+                    color: #1b1d23;
+                }
             }
         }
     }
@@ -74,27 +75,93 @@ header {
                 font-weight: 500;
                 line-height: 24px;
             }
-            button {
-                border: 0;
+            .btn {
                 width: 252px;
-                height: 72px;
-                background: #1b1d23;
-                padding: 25px 32px 22px 37px;
-                column-gap: 24px;
+                a {
+                    display: flex;
+                    align-items: center;
+                    column-gap: 24px;
+                    background: #1b1d23;
+                    padding: 25px 32px 22px 37px;
+                    transition: 0.5s;
+                    &:hover {
+                        transform: scale(0.98);
+                        background: #60636d;
+                    }
+                    button {
+                        color: #fff;
+                        font-size: 18px;
+                        font-weight: 700;
+                        line-height: 25px;
+                        border: none;
+                        background-color: transparent;
+                        cursor: pointer;
+                    }
+                }
+            }
+            .cards {
                 display: flex;
                 align-items: center;
-
-                p {
-                    width: 135px;
-                    color: #fff;
-                    text-align: right;
+                transform: translate(-270px, 99px);
+                .card {
+                    cursor: pointer;
+                    width: 80px;
+                    height: 80px;
+                    background: white;
+                    padding: 28px 32px 27px 31px;
+                    color: #7d828f;
+                    text-align: center;
                     font-size: 18px;
+                    font-style: normal;
                     font-weight: 700;
                     line-height: 25px;
                 }
-                h3 {
-                    color: white;
+                .first {
+                    background: #1b1d23;
+                    color: #fff;
+                    text-align: center;
+                    font-size: 18px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 25px;
                 }
+            }
+        }
+    }
+}
+.introduction {
+    background-image: url(../img-first-page/introduction-background.png);
+    background-position: bottom right;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 568px;
+    margin-top: 195px;
+    .title {
+        transform: translateY(-85px);
+        h2 {
+            color: #eeeff4;
+            font-size: 250px;
+            font-weight: 700;
+            line-height: 200px;
+            letter-spacing: -5px;
+        }
+        .welcome {
+            transform: translate(189px, -39px);
+            h2 {
+                max-width: 446px;
+                color: #1b1d23;
+                font-size: 72px;
+                font-weight: 700;
+                line-height: 64px;
+                letter-spacing: -2px;
+            }
+            p {
+                max-width: 445px;
+                margin-top: 43px;
+                color: #60636d;
+                font-size: 18px;
+                font-weight: 500;
+                line-height: 24px;
             }
         }
     }
