work with transforms in style.scss

--- a/scss/style.css
+++ b/scss/style.css
@@ -50,6 +50,9 @@ header .nav ul li {
 header .nav ul li:hover {
   color: #1b1d23;
 }
+header .nav .menu {
+  display: none;
+}
 header .wrapper {
   background-image: url(../img-first-page/promo-background.png);
   background-position: center center;
@@ -60,8 +63,8 @@ header .wrapper {
 header .wrapper .promo {
   display: flex;
   flex-direction: column;
-  padding-left: 190px;
-  padding-top: 186px;
+  padding-top: 180px;
+  padding-left: 197px;
 }
 header .wrapper .promo h1 {
   max-width: 544px;
@@ -72,7 +75,7 @@ header .wrapper .promo h1 {
   letter-spacing: -2px;
 }
 header .wrapper .promo p {
-  width: 445px;
+  max-width: 445px;
   margin-top: 10px;
   margin-bottom: 41px;
   color: #fff;
@@ -107,7 +110,7 @@ header .wrapper .promo .btn a button {
 header .wrapper .promo .cards {
   display: flex;
   align-items: center;
-  transform: translate(-270px, 99px);
+  transform: translate(-435px, 105px);
 }
 header .wrapper .promo .cards .card {
   cursor: pointer;
@@ -219,11 +222,12 @@ header .wrapper .promo .cards .first {
 
 .about-featured {
   display: flex;
+  align-items: center;
   column-gap: 495px;
+  margin-bottom: 65px;
 }
 .about-featured h4 {
   width: 446px;
-  margin-bottom: 65px;
   color: #1b1d23;
   font-size: 72px;
   font-weight: 700;
@@ -260,31 +264,411 @@ header .wrapper .promo .cards .first {
   justify-content: space-between;
   align-items: center;
   column-gap: 30px;
+  margin-bottom: 200px;
 }
-.about .about-first {
-  display: block;
+.about .about-desktop {
+  position: relative;
 }
-.about .about-first-tablet {
+.about .about-desktop .some-text h4 {
+  position: absolute;
+  top: 50px;
+  right: 0;
+  font-weight: 700;
+  font-size: 250px;
+  line-height: 80%;
+  letter-spacing: -0.02em;
+  text-align: right;
+  color: #fff;
+  opacity: 0.5;
+}
+.about .about-desktop .some-text h5 {
+  position: absolute;
+  top: 250px;
+  left: 25px;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 125%;
+  color: #fff;
+  margin-top: 200px;
+}
+.about .about-desktop .some-text p {
+  position: absolute;
+  top: 500px;
+  left: 25px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 133%;
+  color: #fff;
+}
+.about .about-tablet {
   display: none;
 }
-.about .about-first-mobile {
+.about .about-mobile {
   display: none;
 }
-.about .about-sec {
-  display: block;
-}
-.about .about-sec-tablet {
+.about .btn {
   display: none;
 }
-.about .about-sec-mobile {
-  display: none;
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 50px;
 }
-.about .about-third {
-  display: block;
+.footer .back {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 200px;
+  background: #1b1d23;
 }
-.about .about-third-tablet {
-  display: none;
+.footer ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 36px;
 }
-.about .about-third-mobile {
-  display: none;
+.footer ul li {
+  color: #7d828f;
+  font-family: "League Spartan";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 25px;
+}
+.footer ul li:hover {
+  color: #1b1d23;
+}
+.footer .btn {
+  width: 252px;
+}
+.footer .btn a {
+  display: flex;
+  align-items: center;
+  column-gap: 24px;
+  background: #1b1d23;
+  padding: 25px 32px 22px 37px;
+  transition: 0.5s;
+}
+.footer .btn a:hover {
+  transform: scale(0.98);
+  background: #60636d;
+}
+.footer .btn a button {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 25px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+@media (max-width: 1300px) {
+  header .wrapper .promo .cards {
+    display: none;
+  }
+}
+@media (max-width: 1050px) {
+  .container {
+    max-width: 1050px;
+  }
+  header .nav {
+    display: flex;
+    padding: 36px 0;
+    column-gap: 95px;
+  }
+  header .wrapper {
+    background-image: url(../img-first-page/promo-background-tablet.png);
+    background-position: left;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 720px;
+  }
+  header .wrapper .promo {
+    padding-top: 180px;
+    padding-left: 100px;
+  }
+  header .wrapper .promo h1 {
+    font-weight: 700;
+    font-size: 96px;
+    line-height: 83%;
+    letter-spacing: -0.02em;
+    color: #fff;
+  }
+  header .wrapper .promo .cards {
+    display: none;
+  }
+  .introduction {
+    display: flex;
+    background-image: none;
+    margin: 0;
+  }
+  .introduction .title {
+    margin-top: 50px;
+    transform: none;
+  }
+  .introduction .title h2 {
+    font-weight: 700;
+    font-size: 120px;
+    line-height: 167%;
+    letter-spacing: -0.03em;
+    color: #eeeff4;
+  }
+  .introduction .title .welcome {
+    transform: translateY(-39px);
+  }
+  .small-team {
+    display: flex;
+    margin-top: 200px;
+    margin-bottom: 207px;
+    background-image: url(../img-first-page/small-team-background-tablet.png);
+    background-position: left;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 560px;
+  }
+  .small-team .info {
+    padding-top: 167px;
+    padding-left: 90px;
+  }
+  .about-featured {
+    display: flex;
+    align-items: center;
+    column-gap: 0;
+  }
+  .about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-items: start;
+    row-gap: 30px;
+    margin-bottom: 100px;
+  }
+  .about .about-desktop {
+    display: none;
+  }
+  .about .about-tablet {
+    padding-left: 20px;
+    padding-right: 20px;
+    display: block;
+    position: relative;
+  }
+  .about .about-tablet h4 {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-weight: 700;
+    font-size: 250px;
+    line-height: 80%;
+    letter-spacing: -0.02em;
+    text-align: right;
+    color: #fff;
+    opacity: 0.5;
+  }
+  .about .about-tablet .some-text {
+    position: absolute;
+    bottom: 20px;
+    left: 30px;
+  }
+  .about .about-tablet .some-text h5 {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 125%;
+    color: #fff;
+    margin-top: 200px;
+  }
+  .about .about-tablet .some-text p {
+    margin-top: 10px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 133%;
+    color: #fff;
+  }
+  .about .about-mobile {
+    display: none;
+  }
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .footer .back {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 120px;
+    height: 120px;
+    background: #1b1d23;
+  }
+}
+@media (max-width: 700px) {
+  .container {
+    max-width: 700px;
+  }
+  header .nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 200px;
+    padding-left: 30px;
+  }
+  header .nav ul {
+    display: none;
+  }
+  header .nav .menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 4px;
+  }
+  header .nav .menu div {
+    width: 24px;
+    height: 3px;
+    background-color: #1b1d23;
+  }
+  header .wrapper {
+    margin: 0 100px;
+    background-image: url(../img-first-page/promo-background-mobile.png);
+    background-position: left;
+    background-repeat: no-repeat;
+    height: 560px;
+  }
+  header .wrapper .promo {
+    padding-top: 190px;
+    padding-left: 30px;
+  }
+  header .wrapper .promo h1 {
+    width: 257px;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 100%;
+    letter-spacing: -0.03em;
+    color: #fff;
+  }
+  header .wrapper .promo p {
+    width: 311px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 133%;
+    color: #fff;
+  }
+  .introduction {
+    display: flex;
+    margin: 0 100px;
+  }
+  .introduction .title {
+    max-width: 311px;
+  }
+  .introduction .title h2 {
+    display: none;
+  }
+  .introduction .title .welcome {
+    margin-top: 50px;
+  }
+  .introduction .title .welcome h3 {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 108%;
+    letter-spacing: -0.04em;
+    color: #1b1d23;
+  }
+  .small-team {
+    margin: 100px;
+    background-image: url(../img-first-page/small-team-background-mobile.png);
+    width: 100%;
+    height: 560px;
+  }
+  .small-team .info {
+    padding-top: 180px;
+    padding-left: 20px;
+  }
+  .small-team .info h4 {
+    width: 311px;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 108%;
+    letter-spacing: -0.04em;
+    color: #fff;
+  }
+  .about-featured h4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .about-featured .btn {
+    display: none;
+  }
+  .about {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  .about .about-desktop {
+    display: none;
+  }
+  .about .about-tablet {
+    display: none;
+  }
+  .about .about-mobile {
+    display: block;
+    position: relative;
+  }
+  .about .about-mobile .some-text {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+  }
+  .about .about-mobile .some-text h5 {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 125%;
+    color: #fff;
+    margin-top: 200px;
+  }
+  .about .about-mobile .some-text p {
+    margin-top: 10px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 133%;
+    color: #fff;
+  }
+  .about .btn {
+    width: 252px;
+  }
+  .about .btn a {
+    display: flex;
+    align-items: flex-start;
+    column-gap: 24px;
+    background: #1b1d23;
+    padding: 25px 32px 22px 37px;
+    transition: 0.5s;
+  }
+  .about .btn a:hover {
+    transform: scale(0.98);
+    background: #60636d;
+  }
+  .about .btn a button {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 25px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  .footer {
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+  }
+  .footer ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }/*# sourceMappingURL=style.css.map */
