--- a/scss/style.scss
+++ b/scss/style.scss
@@ -655,8 +655,7 @@ header {
             width: 252px;
             a {
                 display: flex;
-                align-items: flex-start;
-                // align-items: center;
+                align-items: center;
                 column-gap: 24px;
                 background: #1b1d23;
                 padding: 25px 32px 22px 37px;
